--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Clinica</title>
+    <title>Monllor University</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <title>Clinica</title>
+    <title>Monllor University</title>
     <!-- Bootstrap Core CSS -->
     <link
       href="assets/plugins/bootstrap/css/bootstrap.min.css"
